Orpie ChangeLog
------------------------------------------------------------------------

v1.2

   2004-06-15        Fixed crash due to displaying 'about' screen in
                     a very small terminal window.

   2004-06-14        Implemented user-defined variables and
                     autocompletion routines.

   2004-06-13        mod() now checks properly for >1 stack elements

   2004-04-22        Orpie no longer generates an error message if
                     it is run without a preexisting calculator
                     state file.


v1.1

   2004-04-17        Version 1.1.1 release.  Added Chris Petersen's
                     orpie.spec file for building RPMs.

   2004-04-16        Version 1.1 release.

   2004-04-14        Added a linear system solver that avoids
                     computation of an inverse matrix.

   2004-04-13        Created a parser and associated routines that
                     enable Orpie to read data entered in an external
                     editor.

   2004-04-10        Added a check for inversion of ill-conditioned
                     real matrices.

                     Implemented Mutt-like rcfile macros.

   2004-04-09        Added a configuration variable to enable
                     hiding the help panel.


v1.0

   2004-04-07        Version 1.0.2 release.  Added a manpage for
                     orpie-curses-keys(1).

   2004-04-05        Version 1.0.1 release.  Minor changes to the build
                     script, to assist in package creation (thanks to
                     Uwe Steinmann for the patch).

   2004-04-01        Version 1.0 release.



# arch-tag: DO_NOT_CHANGE_ca34c7fb-62b9-4953-ad3b-d846de94ac1f 