@@ -1,14 +1,8 @@
 # orpierc
 # default key bindings and other settings for the Orpie calculator
 
-# datafile for loading and saving calculator state
-set datafile="~/.orpie/calc_state"
-# file for storing the version of Orpie used to create datafile
-set versionfile="~/.orpie/version"
-# buffer file used for fullscreen viewing of stack elements
-set buffer="~/.orpie/fullscreen"
-# buffer file used for input of data via an external editor
-set input_buffer="~/.orpie/input"
+# directory for storing Orpie data
+set datadir="~/.orpie/"
 # editor used for fullscreen viewing of stack elements
 set editor="vi"
 # whether or not to hide the help panel
