@@ -48,9 +48,6 @@ type complex_mode = | Rect | Polar
 type calculator_modes = {angle : angle_mode; base : base_mode; 
                          complex : complex_mode}
 
-(* type datafile_t = ModesData of calculator_modes | StackData of orpie_data
- * array;; *)
-
 let size_inc = 100
 let pi = 3.14159265358979323846
 
@@ -66,13 +63,14 @@ class rpc_stack =
       method save_state (modes : calculator_modes) 
       (variables : (string, orpie_data) Hashtbl.t) =
          try
-            let version_file = Utility.open_or_create_out_bin
-            !(Rcfile.versionfile) in
-            output_string version_file Version.version;
-            close_out version_file;
-            let save_file = Utility.open_or_create_out_bin !(Rcfile.datafile) in
-            Marshal.to_channel save_file (modes, variables, stack, len) [];
-            close_out save_file
+            let version_file = Utility.join_path !(Rcfile.datadir) "version" in
+            let version_channel = Utility.open_or_create_out_bin version_file in
+            output_string version_channel Version.version;
+            close_out version_channel;
+            let save_file = Utility.join_path !(Rcfile.datadir) "calc_state" in
+            let save_channel = Utility.open_or_create_out_bin save_file in
+            Marshal.to_channel save_channel (modes, variables, stack, len) [];
+            close_out save_channel
          with
             |Unix.Unix_error (err, msg1, msg2) -> raise (Invalid_argument "can't open data file for writing")
             |Failure ff -> raise (Invalid_argument "can't serialize calculator data to file")
@@ -82,28 +80,30 @@ class rpc_stack =
       method load_state () =
          try
             (* check whether the version file exists *)
-            Unix.access (Utility.expand_file !(Rcfile.versionfile)) [Unix.F_OK];
+            let version_file = Utility.join_path !(Rcfile.datadir) "version" in
+            Unix.access (Utility.expand_file version_file) [Unix.F_OK];
             (* if it does exist, try loading it *)
-            let versionfile_channel = 
-               Utility.expand_open_in_ascii !(Rcfile.versionfile) 
+            let version_channel = 
+               Utility.expand_open_in_ascii version_file
             in
-            let ver_string = input_line versionfile_channel in
-            close_in versionfile_channel;
+            let ver_string = input_line version_channel in
+            close_in version_channel;
             (* if the version strings match, then assume it's okay to use
              * Marshal. *)
             if ver_string = Version.version then begin
                (* check whether the state file exists *)
-               Unix.access (Utility.expand_file !(Rcfile.datafile)) [Unix.F_OK];
+               let datafile = Utility.join_path !(Rcfile.datadir) "calc_state" in
+               Unix.access (Utility.expand_file datafile) [Unix.F_OK];
                (* if it does exist, try loading it *)
-               let load_file = Utility.expand_open_in_bin !(Rcfile.datafile) in
+               let load_channel = Utility.expand_open_in_bin datafile in
                let data_modes, data_variables, data_stack, data_len = 
-                  (Marshal.from_channel load_file : calculator_modes * 
+                  (Marshal.from_channel load_channel : calculator_modes * 
                   ((string, orpie_data) Hashtbl.t) * (orpie_data array) * int)
                in
-               (close_in load_file;
+               close_in load_channel;
                stack <- data_stack;
                len <- data_len;
-               data_modes, data_variables)
+               data_modes, data_variables
             end else
                (* if the version strings don't match, don't try loading anything *)
                ({angle = Rad; base = Dec; complex = Rect}, Hashtbl.create 20)
